--- a/client/src/App.css
+++ b/client/src/App.css
@@ -386,3 +386,12 @@ label.form-label {
     max-width: 98vw;
   }
 }
+
+.top-bar-icon {
+  width: 48px;
+  height: 48px;
+  margin: 0 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
